Minor change in AgnosticRemoteClient